# mass-information-retrieval-tool

./: .gitignore  README.md  pyproject.toml
example_data/: config.yaml  input.csv  output.csv
src/mass_information_retrieval_tool/: core.py  main.py
